more chapter2 work

--- a/references.bib
+++ b/references.bib
@@ -1576,6 +1576,17 @@
    issn = {1050-4729},
 }
 
+=== From RI website ===
+@inproceedings{pivtoraiko2005statelattice,
+   author = {Mikhail Pivtoraiko and Alonzo Kelly},
+   title = {Efficient constrained path planning via search in state
+      lattices},
+   booktitle = {The 8th International Symposium on Artificial
+      Intelligence, Robotics and Automation in Space},
+   month = sept,
+   year = {2005},
+}
+
 === From IEEE Xplore ===
 @inproceedings{plaku2010motionsymbolic,
    author = {Plaku, E. and Hager, G.D.},
