--- a/thesis.tex
+++ b/thesis.tex
@@ -249,13 +249,14 @@ We also provide open-source implementations of our algorithms.
 
 \include{thesis-ch01-intro}
 \include{thesis-ch02-roadmaps}
-%\include{thesis-ch03-lazysp}
+\include{thesis-ch03-lazysp}
 \include{thesis-ch04-ibid}
 \include{thesis-ch05-lemur}
-%\include{thesis-ch06-family}
+\include{thesis-ch06-family}
+\include{thesis-ch07-discussion}
 
 \appendix
-%\include{thesis-ch03-lazysp-proofs}
+\include{thesis-ch03-lazysp-proofs}
 \include{thesis-ch04-ibid-proofs}
 
 \bibliographystyle{abbrv}
