update refs, added ch4 text

--- a/old-ch03-e8.tex
+++ b/old-ch03-e8.tex
@@ -299,7 +299,8 @@ of a vertex,
 and also an admissible heuristic function $h(v_a,v_b)$ which computes
 a lower-bound estimate of the optimal cost between two vertices.
 Then the best-first thing to do is equivalent to the
-Bidirectional Heuristic Front-to-Front Algorithm \cite{sint1977bhffa}.
+Bidirectional Heuristic Front-to-Front Algorithm
+\cite{champeauxsint1977bhffa}.
 
 \subsection{Best-First Search with Edge Evaluation}
 
