--- a/proposal-framework.tex
+++ b/proposal-framework.tex
@@ -205,7 +205,7 @@ For appropriate selection
 of $f(\pi)$ and \textsc{EvalPath},
 traditional algorithms such as A* \citep{hart1968astar}
 and the Bidirectional Heuristic Front-to-Front Algorithm
-\citep{sint1977bhffa}
+\citep{champeauxsint1977bhffa}
 are instances of this general formulation.
 
 \subsection{Penalizing Planning Effort}
