--- a/references.bib
+++ b/references.bib
@@ -231,6 +231,45 @@
    url = {http://ijr.sagepub.com/content/28/1/104.abstract},
 }
 
+=== From dl.acm.org ===
+@article{champeauxsint1977bhffa,
+   author = {Dennis de Champeaux and Lenie Sint},
+   title = {An Improved Bidirectional Heuristic Search Algorithm},
+   journal = {J. ACM},
+   issue_date = {April 1977},
+   volume = {24},
+   number = {2},
+   month = apr,
+   year = {1977},
+   issn = {0004-5411},
+   pages = {177--191},
+   numpages = {15},
+   url = {http://doi.acm.org/10.1145/322003.322004},
+   doi = {10.1145/322003.322004},
+   acmid = {322004},
+   publisher = {ACM},
+   address = {New York, NY, USA},
+}
+
+=== From dl.acm.org ===
+@article{champeaux1983biheuragain,
+   author = {Dennis de Champeaux},
+   title = {Bidirectional Heuristic Search Again},
+   journal = {J. ACM},
+   volume = {30},
+   number = {1},
+   month = jan,
+   year = {1983},
+   issn = {0004-5411},
+   pages = {22--32},
+   numpages = {11},
+   url = {http://doi.acm.org/10.1145/322358.322360},
+   doi = {10.1145/322358.322360},
+   acmid = {322360},
+   publisher = {ACM},
+   address = {New York, NY, USA},
+} 
+
 === From RI website ===
 @inproceedings{chang2010pregrasp,
    author = {Lillian Y. Chang and Siddhartha Srinivasa
@@ -364,8 +403,8 @@
 @incollection{demetrescu2010dynamic,
    author = {Demetrescu, Camil and Eppstein, David and Galil, Zvi
       and Italiano, Giuseppe F.},
-   chapter = {Dynamic Graph Algorithms},
-   title = {Algorithms and Theory of Computation Handbook},
+   title = {Dynamic Graph Algorithms},
+   booktitle = {Algorithms and Theory of Computation Handbook},
    editor = {Atallah, Mikhail J. and Blanton, Marina},
    year = {2010},
    isbn = {978-1-58488-822-2},
@@ -417,6 +456,17 @@
    publisher = {MIT Press},
    month = jul,
    year = {2011},
+}
+
+=== Manual ===
+@techreport{doran1966doubletree,
+   author = {J. E. Doran},
+   title = {Doubletree Searching and the Graph Traverser},
+   year = {1966},
+   month = dec,
+   institution = {Department of Machine Intelligence and Perception,
+      University of Edingurgh},
+   number = {EPU-R-22},
 }
 
 === From jstor.org ===
@@ -674,14 +724,14 @@
    url = {http://research.microsoft.com/apps/pubs/default.aspx?id=64510},
 }
 
-@inbook{goldberg2007pointtopoint,
+@incollection{goldberg2007pointtopoint,
    author = {Goldberg, Andrew V.},
-   chapter = {Point-to-Point Shortest Path Algorithms with
+   title = {Point-to-Point Shortest Path Algorithms with
       Preprocessing},
    editor = {van Leeuwen, Jan and Italiano, Giuseppe F.
       and van der Hoek, Wiebe and Meinel, Christoph and Sack, Harald
       and Pl{\'a}{\v{s}}il, Franti{\v{s}}ek},
-   title = {SOFSEM 2007: Theory and Practice of Computer Science:
+   booktitle = {SOFSEM 2007: Theory and Practice of Computer Science:
       33rd Conference on Current Trends in Theory and Practice of
       Computer Science, Harrachov, Czech Republic,
       January 20-26, 2007. Proceedings},
@@ -1601,7 +1651,7 @@
 }
 
 @phdthesis{pohl1969bidirectional,
-   author = {Ira Sheldon Pohl},
+   author = {Ira Pohl},
    title = {Bi-directional and Heuristic Search in Path Problems},
    year = {1969},
    month = may,
@@ -1621,6 +1671,18 @@
    year = {1970},
    issn = {0004-3702},
    doi = {http://dx.doi.org/10.1016/0004-3702(70)90007-X},
+}
+
+=== Created manually, from https://www.doc.ic.ac.uk/~shm/MI/mi6.html ===
+@incollection{pohl1971bidirectional,
+  author  = {Ira Pohl},
+  title = {Bi-Directional Search},
+  editor = {Bernard Meltzer and Donald Michie },
+  booktitle = {Machine Intelligence 6},
+  publisher = {Edinburgh University Press},
+  year = {1971},
+  pages = {127--140},
+  chapter = {9},
 }
 
 === Created manually ===
@@ -1905,26 +1967,6 @@
    doi = {10.1177/0278364904045471},
    url = {http://ijr.sagepub.com/content/23/7-8/729.abstract},
    eprint = {http://ijr.sagepub.com/content/23/7-8/729.full.pdf+html},
-}
-
-=== From dl.acm.org ===
-@article{sint1977bhffa,
-   author = {Sint, Lenie and de Champeaux, Dennis},
-   title = {An Improved Bidirectional Heuristic Search Algorithm},
-   journal = {J. ACM},
-   issue_date = {April 1977},
-   volume = {24},
-   number = {2},
-   month = apr,
-   year = {1977},
-   issn = {0004-5411},
-   pages = {177--191},
-   numpages = {15},
-   url = {http://doi.acm.org/10.1145/322003.322004},
-   doi = {10.1145/322003.322004},
-   acmid = {322004},
-   publisher = {ACM},
-   address = {New York, NY, USA},
 }
 
 === From http://epubs.siam.org/doi/abs/10.1137/0204032 ===
