--- a/thesis-ch03-lazysp.tex
+++ b/thesis-ch03-lazysp.tex
@@ -895,7 +895,7 @@ the beginning or the end of the candidate path at each iteration.
 We conjecture that an alternating version of the Expand selector
 is edge-equivalent to the
 Bidirectional Heuristic Front-to-Front Algorithm
-\citep{sint1977bhffa}
+\citep{champeauxsint1977bhffa}
 for appropriate lazy vertex pair heuristic,
 and that LazySP-Alternate is edge-equivalent
 to a bidirectional LWA*.
